# XAVIER

./: .gitignore  .gitmodules  README.md  license.txt  makefile  meson.build  meson_options.txt  todo.txt
benchmark/: README.md  align.py  benchmark.cpp  generateSeq.cpp  load.py  makefile  run  run_pyaligner.py  score.py  semiglobalAlign.py  software.h  software2.h  softwareRuntime.h  softwareScore.h  test-pc.cpp  test-runtime-overlap.cpp  test-score-overlap.cpp  test-score-random.cpp  test-tn.cpp  test-tp.cpp  test1.seq  test2.seq  testRuntime.cpp  testScore.cpp  utils.h  xavier-bmc-readlen-test.sh  xavier-bmc-x-bw-test.sh
benchmark/tools/seqan/include/seqan/seeds/: seeds_extension.h
examples/: demo  demo.cpp  makefile  meson.build
include/: aligner.h  constants.h  meson.build  ops.h  score.h  seed.h  trace.h  vectors.h  xavier.cpp  xavier.h
include/types/: record.h  score.cpp  score.h  seed.cpp  seed.h  state.cpp  state.h  tentry.cpp  tentry.h  trace.cpp  trace.h  trace_entry.h  vectors.cpp  vectors.h
src/: aligner.cpp  bash.sh  meson.build  score.cpp  seed.cpp  state.cpp  trace.cpp  vectors.cpp  xavier.cpp
test/: makefile  meson.build  test.c  test.cpp
